--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,19 @@
         <version>6.11.0</version>
         <scope>compile</scope>
     </dependency>
-    
+
+	  </dependency>
+    <!-- Add other dependencies as needed -->
+    <dependency>
+    <groupId>org.seleniumhq.selenium</groupId>
+    <artifactId>selenium-java</artifactId>
+    <version>3.141.59</version>
+</dependency>
+<dependency>
+    <groupId>commons-io</groupId>
+    <artifactId>commons-io</artifactId>
+    <version>2.11.0</version>
+</dependency>
     <!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-testng -->
 <dependency>
     <groupId>io.cucumber</groupId>
